# cvrp-tabu-search

./: .gitignore  README.md  pyproject.toml
configs/: invalid_run.json  invalid_runs.json  preliminary_invalid_run.json  preliminary_run.json  run.json  test_run.json
cvrp_tabu_search/: clarke_wright.py  main.py  neighborhoods.py  problem.py  tabu_search.py  utils.py
